--- a/packages/control/src/index.css
+++ b/packages/control/src/index.css
@@ -13,3 +13,20 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+/* ======= Override default FlexLayout css ========= */
+
+.flexlayout__layout {
+  --font-size: 12px;
+  /*--color-base: black;
+  --color-text: white;
+  --color-background: transparent;
+  --color-1: rgba(0,0,0,0.3);*/
+  position: relative;
+  height: 100%;
+}
+
+.flexlayout__tab,
+.flexlayout__tabset {
+  border: 1px solid black;
+}
